# Agents

./: .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: labeler.yml
.github/workflows/: main.yml  welcome.yml
examples/: 01-introduction-to-agents.ipynb  cohere.ipynb  demo.ipynb  experiments.ipynb  gemini.ipynb  server.py
examples/chatbot/: app.py
src/agentforce/: tool_executor.py  tools.py
src/agentforce/llms/: _cohere.py  _llamacpp.py  _openai.py
src/agents/: __init__.py  tool_executor.py  tools.py
src/agents/llms/: _cohere.py  _llamacpp.py  _openai.py
tests/: test_registry.py  test_tools.py
