[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aidoot"
description = "Build Agentic workflows with function calling"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.dynamic]
version = {attr = "aidoot.__version__"}

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["I"]# implementation for isort

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "uv>=0.5.12",
    "rich"
]
